# json2proto

./: .gitignore  CMakeLists.txt  README.md  write_address.cpp
example/src/: CMakeLists.txt
src/: CMakeLists.txt  addressbook.pb.cc  addressbook.proto
trace/: CMakeLists.txt  json_reader.cpp  out.trace  serializer.cpp
trace/data/: addresses.json  sample.json  single_event.json
trace/src/: CMakeLists.txt
